--- a/src/css/cs/base.scss
+++ b/src/css/cs/base.scss
@@ -1,5 +1,6 @@
-@import 'colors';
-@import 'items/mainheader';
-@import 'items/kitchensink';
-@import 'items/calcentralheader';
-@import 'prototypes/advising';
+// @import 'colors';
+// @import 'items/mainheader';
+// @import 'items/kitchensink';
+// @import 'items/calcentralheader';
+@import 'items/selfservice';
+// @import 'prototypes/advising';
